# mygeopy

./: pyproject.toml
.github/workflows/: ci.yml
mygeopy/: triangle.py
tests/: test_triangle.py
