[project]
authors = [{name = "Naiara Patiño", email = "naiarapatino@gmail.com"}]
dependencies = []
name = "mygeopy"
requires-python = ">= 3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[projects.optional-dependencies]
tests = ["pytest"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
mygeopy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
doctest = ">=2.4.12,<3"
